--- a/Seq_Migration/src/views/income.hbs
+++ b/Seq_Migration/src/views/income.hbs
@@ -4,6 +4,10 @@
     </div>
     <form action="/income" method="Post" class="form-align">
         <div class="col-md-3">
+            <label for="UserId" class="form-label">UserId</label>
+            <input type="Number" class="form-control" id="UserId" name="UserId"/>
+        </div>
+        <div class="col-md-3">
             <label for="Source" class="form-label">Source</label>
             <input type="text" class="form-control" id="Source" name="Source"/>
         </div>
