--- a/Seq_Migration/src/views/expense.hbs
+++ b/Seq_Migration/src/views/expense.hbs
@@ -1,8 +1,12 @@
 <div class = "expense">
     <div class = "head-text">
-        <h1>ADD Expense</h1>
+        <h1>ADD EXPENSE</h1>
     </div>
     <form action="/expense" method="Post" class="form-align">
+        <div class="col-md-3">
+            <label for="UserId" class="form-label">UserId</label>
+            <input type="Number" class="form-control" id="UserId" name="UserId"/>
+        </div>
         <div class="col-md-3">
             <label for="Name" class="form-label">Name</label>
             <input type="text" class="form-control" id="Name" name="Name"/>
